Finish v1 development